--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple HTML and CSS display of my favorite Brazillian recipes and it's culinary significance and history!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-css" : "tailwindcss build src/input.css -o dist/styles.css"
   },
   "author": "",
   "license": "ISC"
